Update: add new icons to the skills section and fix responsive layout issues

--- a/css_styles/styles.css
+++ b/css_styles/styles.css
@@ -134,6 +134,7 @@ html {
 }
 
 /* ABOUT SECTION */
+
 #about {
     max-width: 1100px;
     margin: auto;
@@ -147,6 +148,7 @@ html {
     width: 300px;
     border-radius: 20px;
     background-image: radial-gradient(circle at 50% -20.71%, #d1fff8 0, #befff6 10%, #a7fff4 20%, #8dfff3 30%, #6cfbf2 40%, #3cf2f2 50%, #00e8f3 60%, #00dff5 70%, #00d6f9 80%, #00cefd 90%, #00c6ff 100%);
+    box-shadow: -15px 15px 30px rgba(0, 0, 0, 0.6);
 }
 
 #about .about {
@@ -155,6 +157,7 @@ html {
 
 #about .about .title-section {
     font-size: 22px;
+    font-weight: bold;
     text-transform: uppercase;
     color: #111135;
     text-decoration: underline;
@@ -176,7 +179,7 @@ html {
 }
 
 #about .about h3 {
-    font-size: 10px;
+    font-size: 15px;
     font-weight: 500;
     text-transform: uppercase;
     margin-bottom: 20px;
@@ -184,7 +187,7 @@ html {
 }
 
 #about .about p {
-    font-size: 14px;
+    font-size: 15px;
     line-height: 25px;
     color: #565656;
     margin-bottom: 12px;
@@ -217,7 +220,10 @@ html {
 
 .skills-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .section-title {
@@ -234,7 +240,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: .5rem;
     font-size: 1rem;
     font-weight: bold;
     color: aqua;
@@ -245,7 +250,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: .5rem;
     font-size: 1rem;
     font-weight: bold;
     color: aqua;
@@ -253,18 +257,22 @@ html {
 
 .skills-info {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .skills-data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
     height: 60px;
     width: 60px;
 }
 
 .skills-data img {
     margin-top: 20px;
-    width: 80px;
-    height: 50px;
+    width: 60px;
+    height: 45px;
     object-fit: contain;
     max-inline-size: fit-content;
 }
@@ -274,6 +282,7 @@ html {
 }
 
 /* ANIMATION SKILLS */
+
 .skills-data:hover i, .skills-data:hover img {
     animation: bounce-skills .6s;
 }
@@ -297,6 +306,7 @@ html {
 }
 
 /* PORTFOLIO SECTION */
+
 #portfolio {
     max-width: 1100px;
     padding: 100px 0;
@@ -359,6 +369,7 @@ html {
 }
 
 /* CONTACT SECTION */
+
 #contact {
     padding: 100px 15px;
 }
@@ -435,6 +446,7 @@ footer a {
 }
 
 /* RESPONSIVE SECTION */
+
 @media screen and (max-width:800px) {
     .redes {
         display: none;
@@ -479,8 +491,8 @@ footer a {
     }
 
     #about .container-photo img {
-        margin-left: 180px;
-        margin-bottom: 20px;
+        margin-left: 140px;
+        margin-bottom: 40px;
         padding: 10px;
     }
 
@@ -494,7 +506,28 @@ footer a {
     }
 
     #about .about a {
-        margin-left: 230px;
+        margin-left: 180px;
+    }
+
+    /* SKILLS */
+
+    #skills {
+        padding: 50px 0;
+    }
+
+    .skills-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .section-title {
+        margin-bottom: 18px;
+    }
+
+    .skills-title-backend {
+        margin-top: 20px;
     }
 
     /* PORTFOLIO */
@@ -512,6 +545,7 @@ footer a {
     }
 
     /* CONTACT */
+
     #contact {
         padding: 50px 15px;
     }
